--- a/oes-core/src/main/resources/templates/teacher/main/index.html
+++ b/oes-core/src/main/resources/templates/teacher/main/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 管理员端</title>
+    <title>OES | 教师端</title>
     <!-- 引入全局 css 文件 -->
     <%include("../../include/css.html"){}%>
 </head>
@@ -24,6 +24,6 @@
 <% include("../../include/js.html"){} %>
 <%include("api.html"){}%>
 <script>
-    OesUtil.ajaxPage("home", "/admin/home")
+    OesUtil.ajaxPage("home", "/teacher/home")
 </script>
 </html>
