--- a/oes-core/src/main/resources/templates/teacher/question/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/question/update-modal.html
@@ -31,7 +31,7 @@
                             <textarea class="form-control" id="answer" name="answer" rows="2" placeholder="答案 (多选题请用逗号隔开)" autocomplete="off"></textarea>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="course" readonly="readonly" placeholder="所属课程" autocomplete="off"/>
+                            <input class="form-control" id="courseName" readonly="readonly" placeholder="所属课程" autocomplete="off"/>
                         </div>
                         <div class="form-group">
                             <select class="form-control typeSelect" name="typeId" id="typeId"></select>
