--- a/oes-core/src/main/resources/templates/teacher/student/save-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/student/save-modal.html
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-body">
                 <form id="save-form">
-                    <div class="form-group form_datetime">
+                    <div class="form-group">
                         <label>姓名</label>
                         <input type="text" name="name" class="form-control">
                     </div>
