--- a/oes-core/src/main/resources/templates/teacher/student/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/student/update-modal.html
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-body">
                 <form id="update-form">
-                    <div class="form-group form_datetime">
+                    <div class="form-group">
                         <label for="id">ID</label>
                         <input type="text" name="id" class="form-control"
                                id="id" readonly="readonly">
