--- a/oes-core/src/main/resources/templates/teacher/announce/list.html
+++ b/oes-core/src/main/resources/templates/teacher/announce/list.html
@@ -11,8 +11,13 @@
     <% include("../../teacher/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
     <% layout("../../teacher/include/sider.html",{name:"announce"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax announceTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -22,7 +27,7 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/student/announce">系统公告</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/announce">系统公告</a></li>
                         </ol>
                     </div>
                 </div>
@@ -39,26 +44,8 @@
                                 <h3 class="card-title">公告内容</h3>
                             </div>
                             <!-- /.card-header -->
-                            <div class="card-body table-responsive p-0">
-                                <table class="table table-hover">
-                                    <tbody>
-                                    <%for(announce in announceList){%>
-                                    <tr class="flex-row bg-gradient-yellow" rel="${announce.id}">
-                                        <th>${announceLP.index}. ${announce.title}
-                                            <span class="pull-right">
-                                                发布时间：${announce.createTime,dateFormat="yyyy-MM-dd HH:mm:ss"}
-                                            </span>
-                                        </th>
-                                    </tr>
-                                    <tr>
-                                        <td style="font-size: 17px">${announce.content}</td>
-                                    </tr>
-                                    <%}elsefor{%>
-                                    <tr>
-                                        <td colspan="6">暂无公告信息</td>
-                                    </tr>
-                                    <%}%>
-                                    </tbody>
+                            <div class="card-body">
+                                <table id="pageInfo" class="table table-bordered table-striped text-nowrap">
                                 </table>
                             </div>
                             <!-- /.card-body -->
@@ -68,16 +55,20 @@
                 </div><!-- /.row -->
             </div>
         </section>
+        <!-- 模态框 -->
+        <%include("view-modal.html"){}%>
+        <!-- 接口 -->
+        <%include("api.html"){}%>
+        <%}%>
     </div>
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
     </aside>
     <!-- 引入footer -->
     <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
     <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
 </body>
 </html>
 
