--- a/oes-core/src/main/resources/templates/teacher/course/list.html
+++ b/oes-core/src/main/resources/templates/teacher/course/list.html
@@ -13,9 +13,14 @@
     <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
     <% layout("../include/sider.html",{name:"course"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax courseTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -42,38 +47,14 @@
                                 <h3 class="card-title">课程内容</h3>
                                 <div class="card-tools">
                                     <div class="input-group input-group-sm">
-                                        <button id="goSave" class="btn btn-info btn-sm"><i class="fa fa-plus"></i>&nbsp;新增课程
-                                        </button>
+                                        <button id="goSave" class="btn btn-default btn-sm">新增课程</button>&nbsp;
+                                        <button class="btn btn-default btn-sm" onclick="OesUtil.refreshTable('#courseInfo');">刷新数据</button>
                                     </div>
                                 </div>
                             </div>
                             <!-- /.card-header -->
-                            <div class="card-body table-responsive p-0">
-                                <table class="table table-bordered table-striped dataTable table-head-fixed text-nowrap">
-                                    <tbody>
-                                    <tr>
-                                        <th>序号</th>
-                                        <th>课程统一编号</th>
-                                        <th>课程名称</th>
-                                        <th>操作</th>
-                                    </tr>
-                                    <% if( isEmpty(courseList) ){ %>
-                                    <td colspan="6">老师您还未添加课程</td>
-                                    <% }else{ %>
-                                    <% for( course in courseList ){ %>
-                                    <tr class="rowDetail" rel="${course.id}">
-                                        <td>${courseLP.index}</td>
-                                        <td>${course.id}</td>
-                                        <td>${course.courseName}</td>
-                                        <td>
-                                            <button class="rowDel btn btn-danger btn-sm" onclick="deleteCourse(${course.id})">&nbsp;删除
-                                            </button>
-                                        </td>
-                                    </tr>
-                                    <% } %>
-                                    <% } %>
-                                    </tbody>
-                                </table>
+                            <div class="card-body">
+                                <table id="courseInfo" class="table table-bordered table-striped text-nowrap"></table>
                             </div>
                             <!-- /.card-body -->
                         </div>
@@ -82,20 +63,19 @@
                 </div><!-- /.row -->
             </div>
         </section>
+        <!-- 新增课程模态框 -->
+        <% include("save-modal.html"){} %>
+        <!-- 接口 -->
+        <% include("api.html"){} %>
+        <%}%>
     </div>
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
     </aside>
     <!-- 引入footer -->
     <% include("../../include/footer.html"){}%>
-    <!-- 新增课程模态框 -->
-    <% include("save-modal.html"){} %>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
-<!-- 自定義工具 -->
-<script src="/static/js/OesUtil.js"></script>
-<!-- 接口 -->
-<% include("api.html"){} %>
 </body>
 </html>
